--- a/src/styles/components/_hpbar.scss
+++ b/src/styles/components/_hpbar.scss
@@ -29,10 +29,16 @@
 
   &--danger {
     background-color: v.$color-danger;
+    animation: hp-danger-pulse 0.8s ease-in-out infinite;
   }
   &--warning {
     background-color: #e5c007;
   }
+}
+
+@keyframes hp-danger-pulse {
+  0%, 100% { opacity: 1; }
+  50%       { opacity: 0.55; }
 }
 
 .hp-bar-label {
