입력 버튼 비활성화 스타일 추가: opacity 및 커서 변경

--- a/src/styles/components/_ingame.scss
+++ b/src/styles/components/_ingame.scss
@@ -199,6 +199,16 @@
     transform: scale(0.96);
   }
 
+  &:disabled {
+    opacity: 0.28;
+    cursor: not-allowed;
+
+    &:active {
+      filter: none;
+      transform: none;
+    }
+  }
+
   &__img {
     flex: 1;
     min-height: 0;
