--- a/src/styles/components/_ingame.scss
+++ b/src/styles/components/_ingame.scss
@@ -1059,11 +1059,12 @@
     width: 100%;
     display: block;
     image-rendering: pixelated;
-    @include m.mobile {
-      margin-top: m.vw(-7);
-    }
-    @include m.desktop {
-      margin-top: -8px;
+
+    // 위 번: OrderPreview와 동일하게 마지막 재료 위에 얹힘
+    &--top {
+      margin-bottom: -28%;
+      position: relative;
+      z-index: 2;
     }
   }
 
@@ -1075,53 +1076,12 @@
       display: block;
       image-rendering: pixelated;
     }
-    &--veggie {
-      @include m.mobile {
-        margin-bottom: m.vw(-9);
-      }
-      @include m.desktop {
-        margin-bottom: -10px;
-      }
-    }
-    &--cheese {
-      @include m.mobile {
-        margin-bottom: m.vw(-10);
-      }
-      @include m.desktop {
-        margin-bottom: -12px;
-      }
-    }
-    &--sauce {
-      @include m.mobile {
-        margin-bottom: m.vw(-9);
-      }
-      @include m.desktop {
-        margin-bottom: -11px;
-      }
-    }
-    &--patty {
-      @include m.mobile {
-        margin-bottom: m.vw(-9);
-      }
-      @include m.desktop {
-        margin-bottom: -10px;
-      }
-    }
-    &--onion {
-      @include m.mobile {
-        margin-bottom: m.vw(-9);
-      }
-      @include m.desktop {
-        margin-bottom: -10px;
-      }
-    }
-    &--tomato {
-      @include m.mobile {
-        margin-bottom: m.vw(-8);
-      }
-      @include m.desktop {
-        margin-bottom: -9px;
-      }
-    }
+    // OrderPreview와 동일한 퍼센트 마진 사용 (크기 변화에도 비율 유지)
+    &--veggie { margin-bottom: -32%; margin-top: -5%; }
+    &--cheese { margin-bottom: -36%; padding-top: 3%; }
+    &--sauce  { margin-bottom: -33%; padding-top: 5%; }
+    &--patty  { margin-bottom: -32%; }
+    &--onion  { margin-bottom: -32%; }
+    &--tomato { margin-bottom: -30%; }
   }
 }
