협동 및 대결 모드에서 재접속 처리 로직 추가 및 주문서 스타일 수정

--- a/src/styles/components/_ingame.scss
+++ b/src/styles/components/_ingame.scss
@@ -88,6 +88,7 @@
   min-height: 0;
   max-width: 45%;
   max-height: 100%;
+  overflow: hidden;
   align-self: center;
   position: relative;
   isolation: isolate; // 내부 z-index 독립 스택 컨텍스트
