--- a/src/styles/components/_burger.scss
+++ b/src/styles/components/_burger.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  // overflow: hidden;
+  overflow: hidden;
   height: 100%;
 
   @include m.mobile {
