--- a/src/styles/components/_pages.scss
+++ b/src/styles/components/_pages.scss
@@ -87,7 +87,7 @@
 .htp-modal {
   position: fixed;
   inset: 0;
-  background-color: rgba(26, 26, 46, 0.92);
+  background-color: #000c;
   display: flex;
   align-items: center;
   justify-content: center;
