--- a/src/styles/components/_hpbar.scss
+++ b/src/styles/components/_hpbar.scss
@@ -13,16 +13,21 @@
   overflow: hidden;
 
   @include m.mobile {
-    height: m.vw(24);
+    height: m.vw(32);
   }
   @include m.desktop {
-    height: 24px;
+    height: 32px;
   }
 }
 
 .hp-bar-fill {
   height: 100%;
   background-color: v.$color-primary;
+  box-shadow:
+    inset 0 2px #fff,
+    inset 0 -2px #fff,
+    inset -2px 0 #fff,
+    inset 2px 0 #fff;
   transition:
     width 0.2s ease,
     background-color 0.3s ease;
@@ -56,9 +61,9 @@
   text-align: left;
 
   @include m.mobile {
-    font-size: m.vw(14);
+    font-size: m.vw(16);
   }
   @include m.desktop {
-    font-size: 14px;
+    font-size: 16px;
   }
 }
