--- a/src/styles/components/_pages.scss
+++ b/src/styles/components/_pages.scss
@@ -21,6 +21,27 @@
   }
 }
 
+.main-header {
+  &::before {
+    content: "";
+    position: relative;
+    width: 100%;
+    height: 160px;
+    display: block;
+    background: url("/main_top.png") no-repeat center bottom / contain;
+    margin-bottom: 8px;
+  }
+  &::after {
+    content: "";
+    position: relative;
+    width: 100%;
+    height: 100px;
+    display: block;
+    background: url("/main_bottom.png") no-repeat center top / contain;
+    margin-top: 4px;
+  }
+}
+
 .main-title {
   font-family: v.$font-pixel;
   color: v.$color-primary;
@@ -28,6 +49,10 @@
   line-height: 1;
   letter-spacing: 0.05em;
 
+  filter: drop-shadow(0px 4px 0px #fff) drop-shadow(-4px 0px 0px #fff)
+    drop-shadow(4px 0px 0px #fff) drop-shadow(0px -4px 0px #fff)
+    drop-shadow(0px 4px 0px #87410c) drop-shadow(-4px 0px 0px #87410c)
+    drop-shadow(4px 0px 0px #87410c) drop-shadow(0px -4px 0px #87410c);
   @include m.mobile {
     font-size: m.vw(48);
   }
