--- a/src/styles/components/_pages.scss
+++ b/src/styles/components/_pages.scss
@@ -51,8 +51,8 @@
 
   filter: drop-shadow(0px 4px 0px #fff) drop-shadow(-4px 0px 0px #fff)
     drop-shadow(4px 0px 0px #fff) drop-shadow(0px -4px 0px #fff)
-    drop-shadow(0px 4px 0px #87410c) drop-shadow(-4px 0px 0px #87410c)
-    drop-shadow(4px 0px 0px #87410c) drop-shadow(0px -4px 0px #87410c);
+    drop-shadow(0px 4px 0px #870c0c) drop-shadow(-4px 0px 0px #870c0c)
+    drop-shadow(4px 0px 0px #870c0c) drop-shadow(0px -4px 0px #870c0c);
   @include m.mobile {
     font-size: m.vw(48);
   }
