--- a/src/styles/components/_pages.scss
+++ b/src/styles/components/_pages.scss
@@ -135,8 +135,7 @@
     $border-size: 4px,
     $background-color: v.$color-surface,
     $border-color: v.$color-border,
-    $border-inset: true,
-    $border-inset-sides: "all"
+    $border-inset: false // $border-inset-sides: "all"
   );
 
   @include m.mobile {
