--- a/src/styles/components/_pages.scss
+++ b/src/styles/components/_pages.scss
@@ -13,11 +13,11 @@
 
   @include m.mobile {
     padding: m.vw(32) m.vw(24);
-    gap: m.vw(28);
+    // gap: m.vw(28);
   }
   @include m.desktop {
     padding: 32px 24px;
-    gap: 28px;
+    // gap: 28px;
   }
 }
 
@@ -26,7 +26,8 @@
     content: "";
     position: relative;
     width: 100%;
-    height: 160px;
+    height: 100vh;
+    max-height: 100px;
     display: block;
     background: url("/main_top.png") no-repeat center bottom / contain;
     margin-bottom: 8px;
@@ -35,7 +36,8 @@
     content: "";
     position: relative;
     width: 100%;
-    height: 100px;
+    height: 100vh;
+    max-height: 70px;
     display: block;
     background: url("/main_bottom.png") no-repeat center top / contain;
     margin-top: 4px;
@@ -78,10 +80,12 @@
   display: flex;
   flex-direction: column;
   @include m.mobile {
+    margin-bottom: m.vw(20);
     gap: m.vw(8);
   }
   @include m.desktop {
     gap: 8px;
+    margin-bottom: 20px;
   }
 }
 
@@ -313,12 +317,14 @@
   align-items: center;
   font-family: v.$font-pixel;
   color: v.$color-text;
+  background-color: rgb(221, 221, 221);
+
   @include pb.pixel-borders(
     $corner-size: 1,
     $border-size: 2px,
     $border-color: v.$color-border
   );
-  background-color: v.$color-surface;
+  // background-color: v.$color-surface;
 
   @include m.mobile {
     gap: m.vw(10);
@@ -342,12 +348,15 @@
 
   &--top1 {
     color: #ffd700;
+    background-color: v.$color-surface;
   }
   &--top2 {
     color: #c0c0c0;
+    background-color: v.$color-surface;
   }
   &--top3 {
     color: #cd7f32;
+    background-color: v.$color-surface;
   }
 }
 
